--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,4 @@
 SQLALCHEMY_DATABASE_URI = 'postgresql://jorgeluis:j@localhost/epythonflask'
 SQLALCHEMY_TRACK_MODIFICATIONS = False
-# Degug sql in console
+# Debug SQL in console
 SQLALCHEMY_ECHO = True
